force-app/main/default/objects/Asana_Integration_Settings__c/Asana_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Asana Integration Settings</label>
</CustomObject>