force-app/main/default/objects/Asana_Integration_Settings__c/fields/Asana_PAT__c.field-meta.xml
<CustomField>
    <fullName>Asana_PAT__c</fullName>
    <label>Asana PAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>