force-app/main/default/objects/Asana_Integration_Settings__c/fields/Asana_Project_GID__c.field-meta.xml
<CustomField>
    <fullName>Asana_Project_GID__c</fullName>
    <label>Asana Project GID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>