force-app/main/default/objects/Asana_Integration_Settings__c/fields/Filter_By_Tag__c.field-meta.xml
<CustomField>
    <fullName>Filter_By_Tag__c</fullName>
    <label>Filter By Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>