force-app/main/default/objects/Asana_Integration_Settings__c/fields/Filter_Custom_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Filter_Custom_Field_Name__c</fullName>
    <label>Filter Custom Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>