force-app/main/default/objects/Asana_Integration_Settings__c/fields/Webhook_GID__c.field-meta.xml
<CustomField>
    <fullName>Webhook_GID__c</fullName>
    <label>Webhook GID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>