force-app/main/default/objects/Asana_Integration_Settings__c/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>